fix: overflow comments panel

--- a/client/src/components/CommentsListPanel/commentsListPanel.css
+++ b/client/src/components/CommentsListPanel/commentsListPanel.css
@@ -5,6 +5,8 @@
   height: 100vh;
   padding: 10px;
   position: sticky;
+  overflow: auto;
+  padding-bottom: 72px;
 }
 
 .comments__text {
